Step_2_DeployElasticSearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch         
  template:
    metadata:
      labels:
        component: elasticsearch    
    spec:
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: harbor.pks.cfrocket.com/workshop/harbor-elasticsearch:1.0
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: ci-data-es
        imagePullSecrets:
        - name: regsecret
      volumes:
        - name: ci-data-es
          persistentVolumeClaim:
            claimName: es-claim-pvc
      serviceAccountName: geo-search-sa
