es-sb-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch         
  template:
    metadata:
      labels:
        component: elasticsearch    
    spec:
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: gvijayar/harbor-elasticsearch:1.0
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: ci-data-es
      volumes:
        - name: ci-data-es
          emptyDir: {}
      serviceAccountName: geosearch-account     
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  type: NodePort
  selector:
    component: elasticsearch
  ports:
  - name: http
    port: 9200
    protocol: TCP
  - name: transport
    port: 9300
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geosearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geosearch
  template:
    metadata:
      labels:
        app: geosearch
    spec:
      containers:
      - name: geosearch-app
        image: gvijayar/harbor-geosearch:4.0
        ports:
        - containerPort: 8080
      serviceAccountName: geosearch-account  
---
kind: Service
apiVersion: v1
metadata:
  name: geosearch-service
spec:
  selector:
    app: geosearch
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
