Step6_ExposeSpringBootIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geosearch
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: geosearch-1.apps.pks.cfrocket.com
    http:
      paths:
      - path: /
        backend:
          serviceName: geosearch
          servicePort: http
